@@ -843,9 +843,10 @@ FOODPREPPING=FOOD_PREP
 FOODPREP=FOOD_PREP
 FPREP=FOOD_PREP
 FOOD_PREP=<ABILITY>\
-Usage    : FOODPREP LIST/[CONTAINER]\n\r\
-Example  : foodprep bowl\n\r\
+Usage    : FOODPREP LIST/SLICE [FOOD]/[CONTAINER]\n\r\
 Example  : foodprep list\n\r\
+Example  : foodprep bowl\n\r\
+Example  : foodprep slice pie\n\r\
 Example  : foodprep list salad\n\r\
 Example  : foodprep list 5-10\n\r\
 Example  : foodprep list all\n\r\
@@ -853,7 +854,8 @@ This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The ingredients must be placed in a preparation container, \
 The container may be filled with water, if water is required for the recipe.  \
 The ingredients are best obtained through the Butchering skill \
-and the Foraging skill.
+and the Foraging skill.  FoodPrep can also be used to slice food into smaller \
+pieces.
 
 FPRES=FOODPRESERVING
 FOODPRESERVE=FOODPRESERVING
@@ -1466,9 +1468,10 @@ MFPREP=MASTER_FOOD_PREP
 MASTERFOODPREP=MASTER_FOOD_PREP
 MASTERFPREP=MASTER_FOOD_PREP
 MASTER_FOOD_PREP=<ABILITY>\
-Usage    : MASTERFOODPREP LIST/[CONTAINER]\n\r\
-Example  : masterfoodprep bowl\n\r\
+Usage    : MASTERFOODPREP LIST/CHOP [FOOD]/[CONTAINER]\n\r\
 Example  : masterfoodprep list\n\r\
+Example  : masterfoodprep bowl\n\r\
+Example  : masterfoodprep chop salad\n\r\
 Example  : masterfoodprep list salad\n\r\
 Example  : masterfoodprep list 5-10\n\r\
 Example  : masterfoodprep list all\n\r\
@@ -1478,7 +1481,8 @@ The container may be filled with water, if water is required for the recipe.  \
 Master Food Prep takes a bit longer than regular Food Prep, but yields more \
 food than normal, and permits you to prepare multiple things at the same time. \
 The ingredients are best obtained through the Butchering skill \
-and the Foraging skill.
+and the Foraging skill.  Master Food Prep will also allow you to chop food into \
+the smallest bits possible in one go.
 
 MASTERFORAGE=MASTER_FORAGING
 MASTERFORAGING=MASTER_FORAGING
