@@ -306,6 +306,16 @@ in a room for signs of traps whenever entering a room.  When \
 one is spotted, the thief places the mark upon it so others \
 will know their peril.
 
+FIGHTER_AUTO_PISTOL_WHIP=FIGHTER_AUTOPISTOLWHIP
+AUTOPISTOLWHIP=FIGHTER_AUTOPISTOLWHIP
+FIGHTER_AUTOPISTOLWHIP=<ABILITY>\
+Usage    : AUTOPISTOLWHIP\n\r\
+Example  : autopistolwhip\n\r\
+Using this command will toggle Auto Pistol Whipping on and off.  If the Fighter \
+turns this feature on, and knows Pistolwhipping, he will attempt a free \
+bash attempt with a crossbow or other pistolwhipping weapon when the weapon \
+runs out of ammo and the fighter is in range.
+
 THIEF_AUTOSNEAK=AUTOSNEAK
 AUTO_SNEAK=AUTOSNEAK
 AUTOSNEAK=<ABILITY>\
