@@ -1,5 +1,6 @@
 <!--
 BUG: hitting enter in input box is not scrolling back down like it should
+BUG: paste in boxless mode no workie
 TODO: split-screen scroll-back
 TODO: implement Xterm XTGETCAP https://invisible-island.net/xterm/ctlseqs/ctlseqs.html
 TODO: implement MSLP
